Add java 17 support with add opens to tests
- Use surefire 2.22.2
- Add opens for java.lang, java.util, and sun.rmi.transport